--- a/Exe015/pom.xml
+++ b/Exe015/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Exe013</artifactId>
+    <artifactId>Exe015</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>CalculadoraIdade</name>
+    <name>Exe015</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -64,8 +64,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.example.calculadoraidade/org.example.calculadoraidade.HelloApplication
-                            </mainClass>
+                            <mainClass>org.example.exe015/org.example.exe015.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
